--- a/src/pages/add-payment-modal/add-payment-modal.html
+++ b/src/pages/add-payment-modal/add-payment-modal.html
@@ -17,7 +17,7 @@
       <ion-select [(ngModel)]="paymentMode" (ionChange)="paymentModeSelectionChanged()">
           <ion-option value="cash">Cash</ion-option>
           <ion-option value="cheque">Cheque</ion-option>
-          <ion-option value="online">Online</ion-option>
+          <ion-option value="bank transfer">Bank Transfer</ion-option>
       </ion-select> 
     </ion-item>
 
