--- a/src/pages/salesman-select-customer/salesman-select-customer.html
+++ b/src/pages/salesman-select-customer/salesman-select-customer.html
@@ -3,7 +3,7 @@
         <!-- <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
         </button> -->
-        <ion-title>Seelct Customer</ion-title>
+        <ion-title>Select Customer</ion-title>
       </ion-navbar>
       <ion-toolbar>
         <ion-searchbar  #q (ionChange)="searchCustomers(q.value)" placeholder="Search Customers"></ion-searchbar>
