Updated Customer Name in Preview Order

--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -63,7 +63,7 @@
         <ion-row>
           <ion-col col-12 [ngClass]=" showSalesmanLabel ? 'item-visible': 'item-hidden'">
             <strong>
-              <ion-icon name="star"></ion-icon> Salesman: {{salesmanName}}
+              <ion-icon name="star"></ion-icon> Customer: {{customerName}}
             </strong>
           </ion-col>
 
