Added Text Wrap

--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -61,7 +61,7 @@
     <ion-card>
       <ion-card-header text-center>
         <ion-row>
-          <ion-col col-12 [ngClass]=" showSalesmanLabel ? 'item-visible': 'item-hidden'">
+          <ion-col col-12 [ngClass]=" showSalesmanLabel ? 'item-visible': 'item-hidden'" text-wrap>
             <strong>
               <ion-icon name="star"></ion-icon> Customer: {{customerName}}
             </strong>
