--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -46,53 +46,55 @@
   <ion-card *ngFor="let order of orderList">
     <ion-card-content>
       <ion-row>
-        <ion-col text-center>
-            <ion-icon color="grey" name="cart"></ion-icon> Order Id: {{order.orderId}}
+        <ion-col>
+            <ion-icon color="grey" name="cart"></ion-icon> <span class="order-list-label">Order Id:</span> {{order.orderId}}
         </ion-col>
       </ion-row>
         <ion-row>
-          <ion-col text-center>
+          <ion-col>
               <ion-icon color="grey" name=help-buoy></ion-icon>
-              Customer: {{order.userDetail.name}} [{{order.userDetail.externalId}}]
+              <span class="order-list-label">Customer:</span> {{order.userDetail.name}} [{{order.userDetail.externalId}}]
           </ion-col>
         </ion-row>
         <ion-row *ngIf="order.salesmanCode && order.salesmanName">
-          <ion-col text-center>
+          <ion-col>
               <ion-icon color="grey" name=help-buoy></ion-icon>
-              Salesman: {{order.salesmanName}} [{{order.salesmanCode}}]
+              <span class="order-list-label">Salesman:</span> {{order.salesmanName}} [{{order.salesmanCode}}]
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col col-12 text-center>
-            <ion-icon name="pin" color="grey"></ion-icon> Province: <span>{{order.userDetail.country}} [ {{order.userDetail.province}} ]</span>
+          <ion-col col-12>
+            <ion-icon name="pin" color="grey"></ion-icon> <span class="order-list-label">Province:</span> <span>{{order.userDetail.country}} [ {{order.userDetail.province}} ]</span>
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col text-center>
+          <ion-col>
               <ion-icon color="grey" name="calendar"></ion-icon>
-              Date: {{order.lastUpdatedAt}}
+              <span class="order-list-label">Date:</span> {{order.lastUpdatedAt}}
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col text-center>
-              <ion-icon color="grey" name="cash"></ion-icon> Total: {{order.orderTotal}} ZMW
+          <ion-col>
+              <ion-icon color="grey" name="cash"></ion-icon> <span class="order-list-label">Total:</span> {{order.orderTotal}} ZMW
           </ion-col>
-          <ion-col text-center class="{{order.status}}">
-            <ion-icon color="grey" name="podium"></ion-icon>Status: <strong text-uppercase>{{order.status}}</strong>
+        </ion-row>
+        <ion-row>
+          <ion-col class="{{order.status}} order-status">
+            <ion-icon color="grey" name="podium"></ion-icon><span class="order-list-label">Status:</span> <strong text-uppercase>{{order.status}}</strong>
           </ion-col>
         </ion-row>
       <ion-row>
-        <ion-col col-12 text-center>
+        <ion-col col-12>
           <ion-icon color="grey" name="trophy"></ion-icon>
-          Total Tk-Points: <strong text-uppercase>{{order.totalTkPoints}}</strong>
+          <span class="order-list-label">Total Tk-Points:</span> <strong text-uppercase>{{order.totalTkPoints}}</strong>
         </ion-col>
       </ion-row>
         <ion-row>
           <ion-col text-center>
-            <button ion-button outline color="secondary" item-end (click)="getOrderDetial(order)">view order</button>
+            <button ion-button outline color="secondary" item-end (click)="getOrderDetial(order)" class="order-list-btn">view order</button>
           </ion-col>
           <ion-col text-center>
-            <button ion-button color="light" [disabled]="!(order.showImport)" (click)="importOrder(order)"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+            <button ion-button color="light" [disabled]="!(order.showImport)" (click)="importOrder(order)" class="order-list-btn"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
           </ion-col>
         </ion-row>
     </ion-card-content>
