--- a/src/pages/user-payment-history/user-payment-history.html
+++ b/src/pages/user-payment-history/user-payment-history.html
@@ -4,87 +4,43 @@
   </ion-navbar>
 </ion-header>
 <ion-content class="full-background">
-
-    <ion-card>
-      <ion-card-content>
-
-        <ion-row>
-          <ion-col text-center>
-              <ion-icon color="grey" name="calendar"></ion-icon> Payment Date: <strong text-uppercase>{{paymentDate}}</strong>
-          </ion-col>
-        </ion-row>
-
-        <ion-row>
-          <ion-col text-center>
-              <ion-icon color="grey" name="cash"></ion-icon> Amount: <strong text-uppercase>{{paymentAmt}} ZMW</strong>
-          </ion-col>
-        </ion-row>
-
-        <ion-row>
-          <ion-col col-12 text-center>
-            <ion-icon color="grey" name="card"></ion-icon>
-            Payment Mode: <strong text-uppercase>{{paymentMode}}</strong>
-          </ion-col>
-        </ion-row>
-
-        <ion-row [ngClass]="modeIsCash ? 'item-visible': 'item-hidden'">
-          <ion-col col-12 text-center>
-              <ion-icon color="grey" name="star"></ion-icon>Salesman: <strong text-uppercase>{{salesmanName}}</strong>
-          </ion-col>
-        </ion-row>
-
-        <ion-row [ngClass]="modeIsOnline ? 'item-visible': 'item-hidden'">
-        <ion-col col-12 text-center>
-            <ion-icon color="grey" name="information-circle-outline"></ion-icon>Transaction ID: <strong text-uppercase>{{onlineId}}</strong>
-        </ion-col>
-        </ion-row>
-
-        <ion-row [ngClass]="modeIsCheque ? 'item-visible': 'item-hidden'">
-          <ion-col col-12 text-center>
-              <ion-icon color="grey" name="information-circle-outline"></ion-icon>Cheque ID: <strong text-uppercase>{{chequeId}}</strong>
-          </ion-col>
-          </ion-row>
-
-      </ion-card-content>
-    </ion-card>
-
-    <ion-card>
+    <ion-card *ngFor="let payment of data">
         <ion-card-content>
   
-          <ion-row>
+          <ion-row *ngIf="payment.date">
             <ion-col text-center>
-                <ion-icon color="grey" name="calendar"></ion-icon> Payment Date: 01/01/2019
+                <ion-icon color="grey" name="calendar"></ion-icon> Payment Date: {{payment.date}}
             </ion-col>
           </ion-row>
   
-          <ion-row>
+          <ion-row *ngIf="payment.amount">
             <ion-col text-center>
-                <ion-icon color="grey" name="cash"></ion-icon> Amount: 123.00 ZMW
+                <ion-icon color="grey" name="cash"></ion-icon> Amount: {{payment.amount}}
             </ion-col>
           </ion-row>
   
-          <ion-row>
+          <ion-row *ngIf="payment.mode">
             <ion-col col-12 text-center>
               <ion-icon color="grey" name="card"></ion-icon>
-              Payment Mode: <strong text-uppercase>Cash</strong>
+              Payment Mode: <strong text-uppercase>{{payment.mode}}</strong>
             </ion-col>
           </ion-row>
   
-          <ion-row>
+          <ion-row *ngIf="payment.salesmanName">
             <ion-col col-12 text-center>
-                <ion-icon color="grey" name="star"></ion-icon>Salesman: <strong text-uppercase>John Doe</strong>
+                <ion-icon color="grey" name="star"></ion-icon>Salesman: <strong text-uppercase>{{payment.salesmanName}}</strong>
             </ion-col>
           </ion-row>
   
-          <ion-row>
+          <ion-row *ngIf="payment.transactionId">
           <ion-col col-12 text-center>
-              <ion-icon color="grey" name="information-circle-outline"></ion-icon>Transaction ID: <strong text-uppercase>12QWERTY34</strong>
+              <ion-icon color="grey" name="information-circle-outline"></ion-icon>Transaction ID: <strong text-uppercase>{{payment.transactionId}}</strong>
           </ion-col>
           </ion-row>
   
-          <ion-row>
+          <ion-row *ngIf="payment.chequeId">
             <ion-col col-12 text-center>
-                <ion-icon color="grey" name="information-circle-outline"></ion-icon>Cheque ID: <strong text-uppercase>12345</strong>
+                <ion-icon color="grey" name="information-circle-outline"></ion-icon>Cheque ID: <strong text-uppercase>{{payment.chequeId}}</strong>
             </ion-col>
             </ion-row>
   
