--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -91,7 +91,7 @@
       </ion-row>
         <ion-row>
           <ion-col text-center>
-            <button ion-button outline color="secondary" item-end (click)="getOrderDetial(order)" class="order-list-btn">view order</button>
+            <button ion-button outline color="secondary" item-end (click)="getOrderDetail(order)" class="order-list-btn">view order</button>
           </ion-col>
           <ion-col text-center>
             <button ion-button color="light" [disabled]="!(order.showImport)" (click)="importOrder(order)" class="order-list-btn"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
