--- a/src/pages/add-user/add-user.html
+++ b/src/pages/add-user/add-user.html
@@ -147,6 +147,45 @@
           </ion-grid>
         </form>
       </ion-col>
+
+      <!-- Add Salesmanager -->
+      <ion-col *ngIf="showCustomerForm === 'SALESMANAGER'">
+        <form [formGroup]="addSalesmanagerForm">
+          <ion-item>
+            <ion-label floating>Name</ion-label>
+            <ion-input type="text" formControlName="name"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="name.hasError('required') && name.touched">
+            *Name is required
+          </p>
+          <ion-item>
+            <ion-label floating>User Login Id</ion-label>
+            <ion-input type="text" formControlName="userLoginId"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="userLoginId.hasError('required') && userLoginId.touched">
+            *User Login Id is required
+          </p>
+          <ion-item>
+            <ion-label floating>Password</ion-label>
+            <ion-input type="password" formControlName="password"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="password.hasError('required') && password.touched">
+            *Password is required
+          </p>
+          <ion-item>
+            <ion-label floating>Customer Code</ion-label>
+            <ion-input type="text" formControlName="externalId"></ion-input>
+          </ion-item>
+          <p class="error" *ngIf="externalId.hasError('required') && externalId.touched">
+            *Customer code is required
+          </p>
+          <ion-grid>
+            <button ion-button color="secondary" [disabled]="!(addSalesmanForm.controls.name.valid && addSalesmanForm.controls.userLoginId.valid && addSalesmanForm.controls.password.valid)"
+              (click)="createUser('salesman');">Add Salesmanager<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+          </ion-grid>
+        </form>
+      </ion-col>
+
     </ion-row>
   </ion-grid>
 </ion-content>
