--- a/src/pages/admin-list-salesman/admin-list-salesman.html
+++ b/src/pages/admin-list-salesman/admin-list-salesman.html
@@ -20,6 +20,7 @@
   <ion-list *ngIf="salesmanListAvailable && (salesmanList.length > 0)">
     <ion-item *ngFor="let salesman of filteredSalesmanList" (click)="editSalesman(salesman)">
       <span>{{salesman.externalId}}</span><span>{{salesman.name}}</span>
+      <p class="salesmanType" [ngClass]=" salesman.userType == 'SALESMANAGER' ? 'item-visible': 'item-hidden'">Manager</p>
       <!-- <button ion-button clear color="secondary" item-end><h1><ion-icon md="arrow-forward"></ion-icon></h1></button> -->
       <button ion-button clear color="secondary" item-end>
         <ion-icon name="create"></ion-icon>
@@ -27,8 +28,9 @@
     </ion-item>
   </ion-list>
   <ion-card *ngIf="salesmanListAvailable && (salesmanList.length < 1)">
-    <ion-card-header text-center>
-      <h4>No record found</h4>
+    <ion-card-header text-center class="noDataView">
+        <ion-icon name="alert"></ion-icon>
+      <h4>No record found!</h4>
     </ion-card-header>
   </ion-card>
   <!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
