--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -42,9 +42,18 @@
     <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
       <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll>
-  </ion-card> -->
+  </ion-card> --> 
   <ion-card *ngFor="let order of orderList">
     <ion-card-content>
+      <ion-row>
+        <ion-col>
+            <ion-icon color="grey" name="calendar"></ion-icon>
+            <span class="order-list-label">Date:</span> {{order.lastUpdatedAt}}
+        </ion-col>
+        <ion-col class="{{order.status}} order-status">
+          <ion-icon color="grey" name="radio-button-on"></ion-icon><span class="order-list-label">Status:</span> <strong text-uppercase>{{order.status}}</strong>
+        </ion-col>
+      </ion-row>
       <ion-row>
         <ion-col>
             <ion-icon color="grey" name="cart"></ion-icon> <span class="order-list-label">Order Id:</span> {{order.orderId}}
@@ -67,38 +76,34 @@
             <ion-icon name="pin" color="grey"></ion-icon> <span class="order-list-label">Province:</span> <span>{{order.userDetail.country}} [ {{order.userDetail.province}} ]</span>
           </ion-col>
         </ion-row>
+        
         <ion-row>
           <ion-col>
-              <ion-icon color="grey" name="calendar"></ion-icon>
-              <span class="order-list-label">Date:</span> {{order.lastUpdatedAt}}
+              <ion-icon color="grey" name="cash"></ion-icon> <span class="order-list-label"></span> {{order.orderTotal}} ZMW
           </ion-col>
-        </ion-row>
-        <ion-row>
           <ion-col>
-              <ion-icon color="grey" name="cash"></ion-icon> <span class="order-list-label">Total:</span> {{order.orderTotal}} ZMW
+            <ion-icon color="grey" name="trophy"></ion-icon>
+            <span class="order-list-label">Tk-Points:</span> <strong text-uppercase>{{order.totalTkPoints}}</strong>
           </ion-col>
         </ion-row>
-        <ion-row>
-          <ion-col class="{{order.status}} order-status">
-            <ion-icon color="grey" name="podium"></ion-icon><span class="order-list-label">Status:</span> <strong text-uppercase>{{order.status}}</strong>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-        <ion-col col-12>
+        
+      <!-- <ion-row>
+        <ion-col>
           <ion-icon color="grey" name="trophy"></ion-icon>
           <span class="order-list-label">Total Tk-Points:</span> <strong text-uppercase>{{order.totalTkPoints}}</strong>
         </ion-col>
-      </ion-row>
-        <ion-row>
+      </ion-row> -->
+        <ion-row class="buttonWrapper">
           <ion-col text-center>
-            <button ion-button outline color="secondary" item-end (click)="getOrderDetail(order)" class="order-list-btn">view order</button>
+            <button ion-button outline color="secondary" item-end (click)="getOrderDetail(order)" class="order-list-btn">VIEW ORDER</button>
           </ion-col>
           <ion-col text-center>
-            <button ion-button color="light" [disabled]="!(order.showImport)" (click)="importOrder(order)" class="order-list-btn"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+            <button ion-button color="light" [disabled]="!(order.showImport)" (click)="importOrder(order)" class="order-list-btn"><ion-icon name="arrow-dropdown-circle"></ion-icon> IMPORT ORDER<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
           </ion-col>
         </ion-row>
     </ion-card-content>
   </ion-card>
+
   <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
@@ -111,7 +116,7 @@
 <ion-footer *ngIf="orderList.length" class="full-background">
   <ion-row>
     <ion-col text-center>
-      <button ion-button  color="secondary" (click)="filterOrderToExport()"><ion-icon name="document"></ion-icon> Export to csv</button>
+      <button ion-button  color="secondary" (click)="filterOrderToExport()" class="exportBtn"><ion-icon name="document"></ion-icon> Export to csv</button>
     </ion-col>
   </ion-row>
 </ion-footer>
