--- a/src/pages/salesman-dashboard/salesman-dashboard.html
+++ b/src/pages/salesman-dashboard/salesman-dashboard.html
@@ -95,7 +95,8 @@
           </ion-row>
   </ion-card>
 
-  <ion-card class="tabs-wrapper" *ngIf="data.creditLimit !== undefined">
+  <!-- <ion-card class="tabs-wrapper" *ngIf="data.creditLimit !== undefined"> -->
+    <ion-card class="tabs-wrapper">
       <ion-card-header class="card-title">
         OUTSTANDING
       </ion-card-header>
